# sigma-tool

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  UVP.md  brainstorm.md  brainstorm2.md  goal.md  package.json  pyproject.toml
.claude/: launch.json
app/: __init__.py  bootstrap.py  config.py  main.py  observability.py  product_matching.py
app/api/: __init__.py  deal_watch.py  dependencies.py  health.py  products.py  runs.py  sessions.py
app/auth/: __init__.py  models.py  service.py
app/conversation/: service.py
app/deal_watch/: __init__.py  costs.py  models.py  policy.py  repository.py  scenarios.py  service.py
app/domain/: __init__.py  models.py
app/listings/: normalizer.py
app/llm/: client.py  schemas.py
app/orchestration/: __init__.py  search.py
app/product_research/: service.py
app/ranking/: engine.py  explanations.py  risk.py
app/repositories/: __init__.py  protocols.py  supabase.py
app/services/: __init__.py  cache_policy.py  ports.py
app/sources/: __init__.py  base.py  ceneo.py  firecrawl.py
docs/: PICKY_SHOPPING_AGENT_PHASES_0_5.md  SIGMA_SHOPPING_AGENT_PHASES_0_5.md  demo-script.md
docs/Market Research/: powerset-master-market-research-2026.md
docs/reports/: 2026-07-11-solidgate-case-alignment.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
prototype/znajdz/: README.md  config.example.js  config.js  design.md  index.html
scripts/: phase4_smoke.py  verify_run_polling.py
tests/: conftest.py  test_bootstrap.py  test_health.py
video/: package-lock.json  package.json
(+93 files in other folders)
